# logistics

./: .gitignore  01_Master_Data_Warehouse_Settings.csv  02_Transaction_Management_Warehouse_Jobs.csv  03_Order_Management_Inbound_Operations.csv  04_Order_Management_Outbound_Operations.csv  05_Order_Management_Internal_Operations.csv  06_Value_Added_Services.csv  07_Stock_Management.csv  08_Operations_Management.csv  09_Facility_Management.csv  10_Billing_Management.csv  11_Compliance_and_Sustainability.csv  12_Reporting_and_Analytics.csv  13_Integration_Points.csv  AGENTS.md  AIR_BOOKING_VOLUME_WEIGHT_ANALYSIS.md  AIR_FREIGHT_MODULE_REVIEW.md  AIR_FREIGHT_WORKSPACE_LAYOUT.md  BIR_CAS_FOOTER_QUICK_COPY.txt  BIR_CAS_FOOTER_README.md  BOOKING_TO_SHIPMENT_VALIDATION.md  CALCULATION_METHOD_DISPLAY.md  CAPACITY_EXCEED_WARNING_IMPLEMENTATION.md  CHARGEABLE_WEIGHT_ANALYSIS.md  CHARGE_FIELDS_POPULATION_FIX.md  CHARGE_POPULATION_ISSUE.md  CHARGE_POPULATION_ISSUE_SIMPLE.md  CREATE_TRANSPORT_JOB_IMPLEMENTATION.md  CUSTOMS_MODULE_ANALYSIS.md  CUSTOMS_WORKSPACE_LAYOUT.md  DECLARATION_ENHANCEMENTS.md  DECLARATION_ORDER_ISSUE_EXPLANATION.md  DIMENSION_VOLUME_CONVERSION_REVIEW.md  FIX_INSTRUCTIONS.md  FIX_SQL_FRAPPECLOUD.sql  FRAPPECLOUD_FIX.md  GLOBAL_CUSTOMS_IMPLEMENTATION.md  GLOBAL_CUSTOMS_IMPLEMENTATION_PLAN.md  IATA_INTEGRATION_ANALYSIS.md  IATA_INTEGRATION_REVIEW.md  (+67 more)
docs/: ACCOUNTS_TAB_STANDARDIZATION_REPORT.md  ADDITIONAL_CHARGES_FEATURE.md  BOOKING_VS_SHIPMENT_ALIGNMENT_REPORT.md  CHARGE_CALCULATION_DESIGN.md  CONTAINER_MANAGEMENT_DESIGN.md  CONTAINER_MANAGEMENT_USER_GUIDE.md  DENSITY_FACTOR_GUIDE.md  DOCUMENTS_FEATURE_DESIGN.md  ENTRY_TYPE_DESIGN.md  ERPNext_CORE_INTEGRATION_DESIGN.md  FCL_CW1_ALIGNMENT_REPORT.md  GLOBAL_MEASUREMENTS_DESIGN.md  HOUSE_TYPE_AND_ENTRY_TYPE_IMPLEMENTATION_STATUS.md  HOUSE_TYPE_DESIGN.md  INTERCOMPANY_TRANSACTIONS_DESIGN.md  LOGISTICS_IMPROVEMENT_SUGGESTIONS.md  LOGISTICS_INTEGRITY_AND_ANALYSIS_REPORT.md  LOGISTICS_INTEGRITY_REPORT_2026.md  LOGISTICS_MODULE_INTEGRATION_DESIGN.md  MIGRATE_MEASUREMENTS_TO_LOGISTICS_SETTINGS.md  MILESTONES_IMPLEMENTATION_DESIGN.md  MILESTONE_TRACKING_DESIGN.md  MULTIMODAL_QUOTATION_DESIGN.md  ODDS_PROVIDER_APIS.md  ONE_OFF_QUOTE_AND_CONTRACT_QUOTE_DESIGN.md  QUOTATION_TYPE_INTEGRATION_DESIGN.md  REVENUE_COST_RECOGNITION_WIP_ACCRUAL.md  ROUTING_TAB_DESIGN.md  Revenue_and_Cost_Recognition_User_Guide.md  SPECIAL_PROJECTS_MODULE_DESIGN.md  SPECIAL_PROJECTS_REPORTS.md  SPECIAL_PROJECTS_REVIEW.md  SPECIAL_PROJECTS_SETUP_AND_WORKSPACE.md  WIKI_USER_GUIDE.md  air_booking_vs_sea_booking_packages_and_measurements.md  container-status-auto-update-design.md  (+6 more)
(+3237 files in other folders)
