[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "logistics"
authors = [
    {name = "Agilasoft Cloud Technologies Inc.", email = "info@agilasoft.com"}
]
description = "CargoNext - Comprehensive Logistics Management System"
requires-python = ">=3.8"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe",
    "zeep>=4.2",
    # PyPika URL dependency required for Frappe v16+ with uv installer
    # Dependency resolver will handle version conflicts with v15
    "PyPika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/agilasoft/logistics"
Repository = "https://github.com/agilasoft/logistics"
Issues = "https://github.com/agilasoft/logistics/issues"

[tool.setuptools]
packages = ["logistics"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md", "*.py", "*.yml", "*.yaml", "*.html", "*.js", "*.css"]
